2011-09-01  Valek Filippov

		* FH: More records.

2011-08-31  Valek Filippov

		* FH: Minimal support for Freehand format moved from fhre.
		* FH: Use dict to update status line

2011-08-29  Alexandre Prokoudine

		* RX2: Committed Frankie Fisher improvements 

2011-08-24  Valek Filippov 

		*RX2: small improvements
		#RX2: EQ, TRSH, COMP parsing

2011-08-23  Valek Filippov 

		* RX2: moved initial parsing of REX2 from rexpy to oletoy.

2011-08-22  Valek Filippov

		* VBA: "dir" is not always the last one
		* Try to show more than 3 bytes as utf-16 string

2011-08-21  Valek Filippov

		* Added "esc" command to parse 'Escher' blocks
		* XLS: Handle nested BOFs; group records by Begin/End brackets

2011-08-20  Valek Filippov

		* Add 'reload' to re-read same file.

2011-08-18  Valek Filippov

		* DOC: saving with screwing VBA modules
		* XLS: fix FONT, part of XF parsed
		* inflate.deflate takes 'flavour' to invert tokens meaning

2011-08-15  Valek Filippov

		* OLE: rename oleparse to ole. Start to implement CFB parsing.
		* Added "command" to entry line, only "$ole" with optional "@offset" is supported atm.

2011-08-14  Valek Filippov

		* VBA: placeholder for ctyping gsf_vba_inflateup
		* PPT: parse RT_ExternalOleObjectStg
		* VBA: workaround for compression bug in MSOffice
		* DOC: initial minimal support for doc

2011-08-13  Valek Filippov

		* VBA: fix module iteration
		* Add copying hdrow value as address into entry
		* Remove gsf import from inflate.py

2011-08-12  Valek Filippov

		* Moved libgsf parts to ctypes, no more dependency on python bindings to libgsf.
		* VBA: [MS-OVBA] seems to be incorrect about CompressedChunkHeader
		* Add simple +- to entry for address
		* OLE: Workaround for semi-broken files

2011-08-11  Valek Filippov

		* VBA: fix inflate_vba
		* VSD: put back names for stencil streams
		* Added "#" to entry to go to offset at hexdump

2011-08-10  Valek Filippov

		* VBA: decompress all modules

2011-08-09  Valek Filippov
