@@ -1,3 +1,7 @@
+2011-09-04  Valek Filippov
+
+		* VSD: Parse TextField.
+
 2011-09-01  Valek Filippov
 
 		* FH: More records.
